// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WfModuleHeader Mounts and does not focus 1`] = `
<WfModuleHeader
  focusModule={[Function]}
  isSelected={false}
  moduleIcon="some-icon"
  moduleName="Some module name"
  status="busy"
>
  <div
    className="wf-card mx-auto"
  >
    <div
      className="output-bar-container"
    >
      <StatusBar
        isSelected={false}
        status="busy"
      >
        <div
          className="module-output-bar-orange"
        />
      </StatusBar>
    </div>
    <div
      className="card-block p-0"
    >
      <div
        className="module-card-info"
      >
        <div
          className="module-card-header"
        >
          <div
            className="module-header-content"
          >
            <div
              className="d-flex justify-content-start align-items-center"
            >
              <div
                className="icon-some-icon WFmodule-icon mr-2"
              />
              <div
                className="t-d-gray WFmodule-name"
              >
                Some module name
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</WfModuleHeader>
`;

exports[`WfModuleHeader Mounts and focuses 1`] = `
<WfModuleHeader
  focusModule={[Function]}
  isSelected={true}
  moduleIcon="some-icon"
  moduleName="Some module name"
  status="busy"
>
  <div
    className="wf-card mx-auto"
  >
    <div
      className="output-bar-container"
    >
      <StatusBar
        isSelected={true}
        status="busy"
      >
        <div
          className="module-output-bar-orange"
        />
      </StatusBar>
    </div>
    <div
      className="card-block p-0"
    >
      <div
        className="module-card-info"
      >
        <div
          className="module-card-header"
        >
          <div
            className="module-header-content"
          >
            <div
              className="d-flex justify-content-start align-items-center"
            >
              <div
                className="icon-some-icon WFmodule-icon mr-2"
              />
              <div
                className="t-d-gray WFmodule-name"
              >
                Some module name
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</WfModuleHeader>
`;
